<resources>
    <string name="app_name">Sofa</string>
    <string name="welcome">التطبيق الاول لبيع وطلب الطعام من المنزل</string>
    <string name="sale_welcome">بيع الطعام</string>
    <string name="buy_welcome">طلب الطعام</string>
    <string name="protectsave">جميع الحقوق محفوظة لتطبيق سفرة 2018</string>
    <string name="title_activity_ask_food">AskFoodActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">مرحبا بك</string>
    <string name="nav_header_subtitle">تفضل بتسجيل الدخول</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="opennow">مفتوح الان</string>
    <string name="title_activity_rest_food_items">RestFoodItemsActivity</string>
    <string name="tabRestItems_text">قائمة الطعام</string>
    <string name="tabRestReviews_text">التعليقات والتقييم</string>
    <string name="tabRestInfo_text">معلومات المتجر</string>
    <string name="cost">السعر</string>
    <string name="PreparTime">مدة تحضير الطلب :</string>
    <string name="specalOffer">طلب خاص</string>
    <string name="Amount">الكمية</string>
    <string name="AddTocart">أضف إلى السلة</string>
    <string name="Toatal">الاجمالي</string>
    <string name="Addmore">أضف المزيد</string>
    <string name="DoOrder">تنفيذ الطلب</string>
    <string name="loginPlease">تفضل بتسجيل الدخول</string>
    <string name="email">البريد الالكتروني</string>
    <string name="Pass">كلمة المرور</string>
    <string name="login">تسجيل دخول</string>
    <string name="ForgetPass">نسيت كلمة المرور ؟</string>
    <string name="newacount">إنشاء حساب جديد</string>
    <string name="Name">الاسم</string>
    <string name="Phone">الجوال</string>
    <string name="City">المدينة</string>
    <string name="WelcomeReviews_Txt">يسعدنا مشاركتك بتعليق او تقييم للتطبيق</string>
    <string name="AddReviews_Txt">أضف تقييم او تعليق</string>
    <string name="Stuts">الحالة</string>
    <string name="Alhae">الحي</string>
    <string name="RequestTime">وقت الطلبات</string>
    <string name="Delivertime">وقت التوصيل</string>
    <string name="DeliverMethode">طريقة التوصيل</string>
    <string name="minCharge">الحد الادني</string>
    <string name="DeliverCost">رسوم التوصيل</string>
    <string name="orderNo">رقم الطلب</string>
    <string name="Deliver">التوصيل</string>
    <string name="About">هو مكان تقدم فيه المأكولات والمشروبات للزبائن. تم تشغيل المطاعم في بداية الأمر على جوانب طرق السفر ليتمكن المسافرون من التوقف للراحة واستعادة حيويتهم. أما اليوم فإن المطاعم تكاد تكون في كل مكان في الشوارع الهادئة والطرق المزدحمة، وفي الفنادق والمطارات ومحطات الحافلات والقطارات، وكذلك في المتنزهات والمباني التي تضم المكاتب وفي مراكز التسوق. تشكل المطاعم الجزء الأكبر في صناعة خدمة الطعام. وتشكل المحلات التي تقدم الطعام للناس خارج بيوتهم جزءا من هذه الصناعة، بما فيها المدارس والمستشفيات والمصانع والسجون.</string>
    <string name="ask">استعلام</string>
    <string name="suggest">اقتراح</string>
    <string name="shakowa">شكوى</string>
    <string name="Send">ارسال</string>
    <string name="followUs">تابعنا على :</string>
    <string name="Price">السعر حسب الطلب</string>
    <string name="TimeDuration">ساري لفترة محدودة</string>
    <string name="AddProduct">أضف منتج جديد</string>
    <string name="ProdctName">اسم المنتج</string>
    <string name="ProductDesc">وصف مختصر</string>
    <string name="Addphoto">أضف صورة للمنتج</string>
    <string name="Add">أضف</string>
    <string name="AddNewOffer">أضف عرض جديد</string>
    <string name="TimeFrom">المدة من</string>
    <string name="TimeTo">المدة الى</string>
    <string name="CommtionText">يرجى تحويل 10% من الربح المباع في مدة أقصاها شهر علما بأن جميع الطلبات ستكون مسجلة على حسابك الشخصي</string>
    <string name="RestSale">مبيعات المطعم</string>
    <string name="AppCommtion">عمولات التطبيق</string>
    <string name="PayingDept">ما تم سداده</string>
    <string name="Remining">المتبقي</string>
    <string name="PankInfo">الراجحي : 263423456</string>
    <string name="PankInfo2">الأهلي : 0897897766</string>
    <string name="PankInfo3">باسم مؤسسة سفرة</string>
    <string name="previousorder">طلباتي السابقة</string>
    <string name="currentOrder">طلباتي الحالية</string>
    <string name="next">التالي</string>
    <string name="placedesc">وصف السكن</string>
    <string name="PassAgin">إعادة كلمة المرور</string>
    <string name="Region">الحي</string>
    <string name="title_activity_new_rest_owner_account">NewRestOwnerAccountActivity</string>
    <string name="RestName">اسم المطعم</string>
    <string name="then">متابعة</string>
    <string name="title_activity_creat_new_rest">CreatNewRestActivity</string>
    <string name="Catagory">التصنيفات</string>
    <string name="ENterPass">الرجاء ادخال كلمة المرور</string>
    <string name="ENterEmail">الرجاء ادخال البريد الالكتروني</string>
    <string name="NoInternet">الرجاء التحقق من اتصالك بالانترنت</string>
    <string name="EnrName">الرجاء ادخال الاسم</string>
    <string name="EnrPhon">الرجاء ادخال رقم الهاتف</string>
    <string name="ENterCity">الرجاء اختيار المدينة</string>
    <string name="ENterRegion">الرجاء اختيار المنطقة</string>
    <string name="EnterDesc">الرجاء ادخال الوصف</string>
    <string name="ConfirmPass">الرجاء تأكيد كلمة السر</string>
    <string name="MinCHergEnter">الرجاء ادخال الحد الادنى للطلب</string>
    <string name="SelectCatagory">الرجاء اختيار تصنيف للمطعم</string>
    <string name="DeliverCostEnter">الرجاء تحديد قيمة رسوم التوصيل</string>
    <string name="PhoneEnter">الرجاء ادخال رقم الجوال</string>
    <string name="WhatsEnter">الرجاء ادخال رقم للوتس اب</string>
    <string name="PhotoSelect">الرجاء وضع صورة للمطعم</string>
</resources>
