<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activites.AskandSaleFoodActivity"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/CommtionText"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp">

            <TextView
                android:id="@+id/RestSaleVal_Commtion_Txt"
                android:layout_width="wrap_content"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/AppCommtionVal_Commtion_Txt"
                android:layout_width="wrap_content"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/PayingdeptVal_Commtion_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/ReminingVal_Commtion_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RestSale_Commtion_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RestSale"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/AppCommtion_Commtion_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AppCommtion"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/Payingdept_Commtion_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PayingDept"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/Remining_Commtion_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Remining"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/PankInfo"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/PankInfo2"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/PankInfo3"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />


</android.support.constraint.ConstraintLayout>