<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activites.AddNewProductActivity">


    <EditText
        android:id="@+id/ProductName_addNewProduct_Ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextborder"
        android:hint="@string/ProdctName"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <EditText

        android:id="@+id/ProductDesc_addNewProduct_Ed"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/edittextborder"
        android:hint="@string/ProductDesc"
        android:paddingStart="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <EditText
        android:id="@+id/Cost_addNewProduct_Ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextborder"
        android:hint="@string/cost"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/Time_addNewProduct_Ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextborder"
        android:hint="@string/PreparTime"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478">

        <EditText
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/TimeTo_Ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edittextborder"
            android:hint="@string/TimeTo"
            android:layout_weight="0.5"
            android:layout_marginEnd="20dp"/>

        <EditText
            android:id="@+id/TimeFrom_Ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="0.5"
            android:background="@drawable/edittextborder"
            android:hint="@string/TimeFrom"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617">

        <ImageView
            android:id="@+id/ProductPhoto_addNewProduct_Img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/star_y" />

        <TextView
            android:id="@+id/AddPhoto_addNewProduct_TXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"

            android:layout_marginEnd="36dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"

            android:paddingBottom="5dp"
            android:text="@string/Addphoto"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>

    <Button
        android:id="@+id/Add_addNewProduct_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />


</android.support.constraint.ConstraintLayout>